--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <br>
 <p>
 <br>
-<a href="resume.pdf">Resume</a> (incomplete, Jan 2021)
+<a href="resume.pdf">Resume</a> (May 2021)
 </p>
 
 <h3>Notes</h3>
